Add debugging tasks

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "next-starter-jamstack",
   "version": "0.1.0",
   "scripts": {
-    "dev": "next dev",
+    "dev": "NODE_OPTIONS='--inspect' next dev",
     "build": "next build && next export",
     "start": "next dev"
   },
