--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "bootstrap": "^4.5.0",
+    "bootstrap-icons": "^1.0.0",
     "next": "9.5.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.3.0",
