--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "9.5.1",
     "react": "16.13.1",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "yaml": "^1.10.0"
   },
   "devDependencies": {}
 }
