--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -15,33 +15,50 @@ Faith:
     - Elisha’s faith against the Aramean army – 2 Kings 6: 2-Kings-6
     - Hezekiah’s faith against the Assyrian army– 2 Chronicles 32: 2-Chronicles-32
   Patience:
-    - Abraham’s 100-year wait for God’s promised son -- Genesis 21: Genesis-21      
-    - Isaac’s 20-year wait for his promised son -- Genesis 25: Genesis-25
+    - Abraham’s 100-year wait for God’s promised son - Genesis 21: Genesis-21      
+    - Isaac’s 20-year wait for his promised son - Genesis 25: Genesis-25
     - The Jews’ failure to wait 40 days for Moses –- Exodus 32: Exodus-32
     - Joshua's patience in waiting on God - Exodus 33: Exodus-33
     - Being patient for God's timing - Deuteronomy 7: Deuteronomy-7
-    - Hannah waits on God's promise -- Samuel 1: 1-Samuel-1
+    - Hannah waits on God's promise - Samuel 1: 1-Samuel-1
     - Samuel instructed Saul 7 days to wait to be king - 1 Samuel 10: 1-Samuel-10
     - Elijah forced to wait on God's timing - 1 Kings 17: 1-Kings-17
-    - Hezekiah's failure to wait on God's timing -- 2 Kings 18: 2-Kings-18
+    - Hezekiah's failure to wait on God's timing - 2 Kings 18: 2-Kings-18
   God's Testing:
-    - God tests Abraham's faith -- Genesis 12: Genesis-12
-    - God tests Isaac's faith -- Genesis 26: Genesis-26
-    - God tests Joseph's faith -- Genesis 39: Genesis-39
-    - God tests Jacob's family -- Genesis 42: Genesis:42
-    - Joseph tests his brothers -- Genesis 44: Genesis-44
-    - God tests the Jews in Egypt -- Exodus 5: Exodus-5    
-    - God tests the Jews in the wilderness -- Exodus 17: Exodus-17
+    - God tests Abraham's faith - Genesis 12: Genesis-12
+    - God tests Isaac's faith - Genesis 26: Genesis-26
+    - God tests Joseph's faith - Genesis 39: Genesis-39
+    - God tests Jacob's family - Genesis 42: Genesis:42
+    - Joseph tests his brothers - Genesis 44: Genesis-44
+    - God tests the Jews in Egypt - Exodus 5: Exodus-5    
+    - God tests the Jews in the wilderness - Exodus 17: Exodus-17
     - The reasons for God's testing in the wilderness - Deuteronomy 8: Deuteronomy-8
     - God's seven tests for counterfeit prophets - Deuteronomy 13: Deuteronomy-13
-    - God tests the Jews by delivering them from bondage -- Judges 3: Judges-3    
-    - God uses Goliath to test the Jews -- 1 Samuel 17: 1-Samuel-17   
-    - David's testing in the wilderness -- 1 Samuel 26: 1-Samuel-26    
-    - David's testing as king -- 2 Samuel 24: 2-Samuel-24    
-    - Elijah's testing in the wilderness (Part I) -- 1 Kings 17: 1-Kings-17    
-    - Elijah's testing in the wilderness (Part II) -- 1 Kings 19: 1-Kings-19    
-    - Micaiah testing in speaking God's Word -- 1 Kings 22: 1-Kinds-22    
-    - Elijah tests Elisha before his rapture -- 2 Kings 2: 2-Kings-2
-Something:
-  Subsection:
-    - something: Genesis-6
+    - God tests the Jews by delivering them from bondage - Judges 3: Judges-3    
+    - God uses Goliath to test the Jews - 1 Samuel 17: 1-Samuel-17   
+    - David's testing in the wilderness - 1 Samuel 26: 1-Samuel-26    
+    - David's testing as king - 2 Samuel 24: 2-Samuel-24    
+    - Elijah's testing in the wilderness (Part I) - 1 Kings 17: 1-Kings-17    
+    - Elijah's testing in the wilderness (Part II) - 1 Kings 19: 1-Kings-19    
+    - Micaiah testing in speaking God's Word - 1 Kings 22: 1-Kinds-22    
+    - Elijah tests Elisha before his rapture - 2 Kings 2: 2-Kings-2
+Spiritual Renewal:
+  Spiritual Renewal / Transformation:
+    - God transforms Abraham and Sara – Genesis 17: Genesis-17    
+    - Jacob’s spiritual transformation to Israel – Genesis 32: Genesis-32
+    - Jacob’s second spiritual renewal – Genesis 35: Genesis-35 
+    - Jacob’s third spiritual renewal – Genesis 46: Genesis-46
+    - Judah’s spiritual renewal – Genesis 43: Genesis-43 
+    -	How to help a new believer’s transformation - Leviticus 6:8-30: Leviticus-Chapter-6.8-30
+    -	Lessons on transformation from the circumcision – Leviticus 12: Leviticus-Chapter-12
+    -	Seven signs of a transformed believer – Leviticus 19: Leviticus-Chapter-19
+    - Spiritual renewal through God’s holy days - Numbers 28:1-15: Numbers-Chapter-28.1-15
+    -	Joshua leads a spiritual renewal – Joshua 6: 
+    -	God transform Naomi’s bitter heart - Ruth 2: Ruth-2
+    -	The seven stages of a believer’s transformation - 1 Samuel 10: 1-Samuel-10
+    - DSeven lessons on spiritual renewal from David’s wilderness victory – 1 Samuel 30: 1-Samuel-30
+    -	God’s transformation of the leper Naaman - 2 Kings 5: 2-Kings-5
+    - Asa leads a spiritual renewal – 2 Chronicles 15: 2-Chronicles-15
+    - Hezekiah leads a spiritual renewal – 2 Chronicles 29: 2-Chronicles-29
+    - Josiah leads a spiritual renewal – 2 Chronicles 34: 2-Chronicles-34
+    -	Seven lessons on the evidence of a nation’s spiritual renewal - 2 Chronicles 31: 2-Chronicles-31
