Correct Exodus topic links

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -3,7 +3,7 @@ Faith:
     - Noah’s faith before the Flood – Genesis 6: Genesis-6      
     - Abraham’s faith in Isaac’s sacrifice – Genesis 22: Genesis-22
     - Joseph’s faith in prison – Genesis 40: Genesis-40
-    - Moses’ faith against the Egyptian army – Exodus 14: Exodus-14
+    - Moses’ faith against the Egyptian army – Exodus 14: Exodus-Chapter-14
     - Rahab’s faith with the Jewish spies – Joshua 2: Joshua-2
     - Deborah’s faith against the Canaanite army – Judges 4: Judges-4
     - Gideon’s faith against the Midianite army – Judges 6: Judges-6
@@ -17,8 +17,8 @@ Faith:
   Patience:
     - Abraham’s 100-year wait for God’s promised son - Genesis 21: Genesis-21      
     - Isaac’s 20-year wait for his promised son - Genesis 25: Genesis-25
-    - The Jews’ failure to wait 40 days for Moses –- Exodus 32: Exodus-32
-    - Joshua's patience in waiting on God - Exodus 33: Exodus-33
+    - The Jews’ failure to wait 40 days for Moses –- Exodus 32: Exodus-Chapter-32
+    - Joshua's patience in waiting on God - Exodus 33: Exodus-Chapter-33
     - Being patient for God's timing - Deuteronomy 7: Deuteronomy-7
     - Hannah waits on God's promise - Samuel 1: 1-Samuel-1
     - Samuel instructed Saul 7 days to wait to be king - 1 Samuel 10: 1-Samuel-10
@@ -30,8 +30,8 @@ Faith:
     - God tests Joseph's faith - Genesis 39: Genesis-39
     - God tests Jacob's family - Genesis 42: Genesis:42
     - Joseph tests his brothers - Genesis 44: Genesis-44
-    - God tests the Jews in Egypt - Exodus 5: Exodus-5    
-    - God tests the Jews in the wilderness - Exodus 17: Exodus-17
+    - God tests the Jews in Egypt - Exodus 5: Exodus-Chapter-5    
+    - God tests the Jews in the wilderness - Exodus 17: Exodus-Chapter-17
     - The reasons for God's testing in the wilderness - Deuteronomy 8: Deuteronomy-8
     - God's seven tests for counterfeit prophets - Deuteronomy 13: Deuteronomy-13
     - God tests the Jews by delivering them from bondage - Judges 3: Judges-3    
