Add discipleship study topic

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -32,8 +32,8 @@ Faith:
     - Joseph tests his brothers - Genesis 44: Genesis-44
     - God tests the Jews in Egypt - Exodus 5: Exodus-Chapter-5    
     - God tests the Jews in the wilderness - Exodus 17: Exodus-Chapter-17
-    - The reasons for God's testing in the wilderness - Deuteronomy 8: Deuteronomy-8
-    - God's seven tests for counterfeit prophets - Deuteronomy 13: Deuteronomy-13
+    - The reasons for God's testing in the wilderness - Deuteronomy 8: Deuteronomy-Chapter-8
+    - God's seven tests for counterfeit prophets - Deuteronomy 13: Deuteronomy-Chapter-13
     - God tests the Jews by delivering them from bondage - Judges 3: Judges-3    
     - God uses Goliath to test the Jews - 1 Samuel 17: 1-Samuel-17   
     - David's testing in the wilderness - 1 Samuel 26: 1-Samuel-26    
@@ -62,3 +62,78 @@ Spiritual Renewal:
     - Hezekiah leads a spiritual renewal – 2 Chronicles 29: 2-Chronicles-29
     - Josiah leads a spiritual renewal – 2 Chronicles 34: 2-Chronicles-34
     -	Seven lessons on the evidence of a nation’s spiritual renewal - 2 Chronicles 31: 2-Chronicles-31
+Discipleship:
+  Following Jesus’ Ten Commandments:    
+    - Prelude to Jesus’ Ten Commandments - Exodus 19: Exodus-Chapter-19
+    - Jesus’ 1st Commandment (no other gods) - Deuteronomy 5:1-7: Deuteronomy-Chapter-5.1-7
+    - Jesus’  2nd Commandment (no idols) - Deuteronomy 5:8-10: Deuteronomy-Chapter-5.8-10
+    - Jesus’  3rd Commandment (the Lord’s name) - Deuteronomy 5:11: Deuteronomy-Chapter-5.11
+    - Jesus’  4th Commandment (the Sabbath) - Deuteronomy 5:12-15: Deuteronomy-Chapter-5.12-15
+    - Jesus’  5th Commandment (honoring parents) - Deuteronomy 5:16: Deuteronomy-Chapter-5.16
+    - Jesus’  6th Commandment (no murder) - Deuteronomy 5:17: Deuteronomy-Chapter-5.17
+    - Jesus’  7th Commandment (no adultery) - Deuteronomy 5:18: Deuteronomy-Chapter-5.18
+    - Jesus’  8th Commandment (no theft) - Deuteronomy 5:19: Deuteronomy-Chapter-5.19
+    - Jesus’  9th Commandment (no false witness) - Deuteronomy 5:20: Deuteronomy-Chapter-5.20
+    - Jesus’ 10th Commandment (no coveting) - Deuteronomy 5:21: Deuteronomy-Chapter-5.21
+    - Post-Script to Jesus’ Ten Commandments Deuteronomy 5.22-33: Deuteronomy-Chapter-5.22-33
+    - Jesus’ 10 Commandments - Single Document - Exodus 20: Deuteronomy-Chapter-5.20
+  Being Part of Jesus’ Royal Priesthood:
+    - God’s law of separation / purity – Exodus 23: Exodus-Chapter-23
+    - The symbolic purity in God’s Tabernacle – Exodus 26: Exodus-Chapter-26
+    - The symbolic purity inside God’s Temple – 1 Kings 6: 1-Kings-6
+    - Being part of Jesus’ priesthood (Part I) – Exodus 39: Exodus-Chapter-39
+    - Being part of Jesus’ priesthood (Part II) – Leviticus 7: Leviticus-Chapter-7
+    - Being part of Jesus’ priesthood (Part III) – Leviticus 8: Leviticus-Chapter-8
+    - Being part of Jesus’ priesthood (Part IV) - Leviticus 9: Leviticus-Chapter-9
+    - Being part of Jesus’ priesthood (Part V) - Leviticus 10: Leviticus-Chapter-10
+    - Being part of Jesus’ priesthood (Part VI) – Leviticus 21: Leviticus-Chapter-21
+    - Being part of Jesus’ priesthood (Part VII) – Leviticus 22: Leviticus-Chapter-22
+    - Being part of Jesus’ priesthood (Part VII) - Numbers 3: Numbers-Chapter-3
+    - Being part of Jesus’ priesthood (Part VIII) - Numbers 4: Numbers-Chapter-4
+    - Being part of Jesus’ priesthood (Part IX) -Numbers 18: Numbers-Chapter-18
+    - Being part of Jesus’ priesthood (Part X) - Deuteronomy 18 : Deuteronomy-Chapter-18
+    - Being part of Jesus’ priesthood (Part XI) - Joshua 21: Joshua-21
+    - Being part of Jesus’ priesthood (Part XII) – 1 Chronicles 24: 1-Chronicles-24
+  Obedience:
+    - Abraham’s obedience in offering Isaac – Genesis 22: Genesis-22
+    - God’s promise of protection with obedience – Exodus 23: Exodus-Chapter-23
+    - A Covenant relationship requires obedience – Exodus 24: Exodus-Chapter-24
+    - Seven reasons to study and obey God’s law – Deuteronomy 1 : Deuteronomy-Chapter-1
+    - Seven blessings from obedience (Part I) – Deuteronomy 7: Deuteronomy-Chapter-7
+    - Circumcising your heart – Deuteronomy 10: Deuteronomy-Chapter-10
+    - Seven blessings from obedience (Part II) - Deuteronomy 11: Deuteronomy-Chapter-11
+    - Moses leads the Jews in a Covenant of obedience - Deuteronomy 27: Deuteronomy-Chapter-27
+    - Joshua exhorts the Jews to be obedient – Joshua 1: Joshua-1
+    - Joshua again exhorts the Jews to be obedient - Joshua 23: Joshua-23
+    - Hannah’s obedience in keeping her vows to God - 1 Samuel 1: 1-Samuel-1
+    - David’s obedience brings God’s protection – 1 Samuel 23: 1-Samuel-23
+    - David’s obedience brings victory in battle - 2 Samuel 8: 2-Samuel-8
+    - David exhorts Solomon to be obedient – 1 Kings 2: 1-Kings-2
+    - Naaman’s faith-led obedience leads to healing - 2 Kings 5: 2-Kings-5
+    - Seven lessons from Hezekiah on maintaining obedience - 2 Kings 18: 2-Kings-18
+    - Josiah ruled as Judah’s most obedient king – 2 Kings 23: 2-Kings-23
+  Keeping Vows:
+    - God’s laws regarding vows  - Leviticus 27: Leviticus-Chapter-27
+    - God’s laws regarding vows  - Numbers 30 : Numbers-Chapter-30
+    - God’s prohibition against delays in honoring vows – Deuteronomy 23: Deuteronomy-Chapter-23
+    - Jephthah’s vow to sacrifice his daughter – Judges 11: Judges-11
+    - Samson’s breaks his vows – Judges 14: Judges-14
+    - The Jews’ foolish vows against Benjamin – Judges 21: Judges-21
+    - Hannah fulfills her vow to God: Numbers-Chapter-30
+    - Saul’s foolish vows– 1 Samuel 14: 1-Samuel-14
+    - Ziba’s broken vows to David and Mephibosheth – 2 Samuel 16: 2-Samuel-16
+    - Saul breaks Joshua’s vow to the Gibeonites - 2 Samuel 21: 2-Samuel-21
+    - Solomon executes Shimei after he breaks his vow – 1 Kings 2: 1-Kings-2
+  Being in a Covenant Relationship:
+    - Lessons from the Nazarite vow for discipleship – Numbers 6: Numbers-Chapter-6
+    - Being God’s light to others – Numbers 8: Numbers-Chapter-8
+    - Principles for a Covenant relationship - Deuteronomy 4: Deuteronomy-Chapter-4
+    - "The Shema: Being a doer of God’s Word - Deuteronomy 6": Deuteronomy-Chapter-6
+    - Seven rules for consuming God’s Word - Deuteronomy 14: Deuteronomy-Chapter-14
+    - Seven lessons on what God desires from you - 1 Kings 6: 1-Kings-6
+    - Seven lessons from Ahab’s mistakes on what God desires from you - 1 Kings 20: 1-Kings-20
+    - Seven lessons from Elisha and Naaman on what God desires from you- 2 Kings 5: 2-Kings-5
+    - Seven lessons on the hope and purpose that Jesus offers - 1 Chronicles 9: 1-Chronicles-9
+    - Seven things God desires from you (Part I) - 1 Chronicles 26: 1-Chronicles-26
+    - Seven things God desires from you (Part II) - 1 Chronicles 29 : 1-Chronicles-29
+    - Seven things God desires from you (Part III) - 2 Chronicles 19: 1-Chronicles-19
