Add Prayer and Worship study topics

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -286,35 +286,34 @@ Prayer:
     - Moses’ prayers save Israel after the golden calf – Exodus 32: Exodus-32
     - Seven lessons on the proper use of your access to God - Exodus 37: Exodus-37
     - Praying at least twice a day - Leviticus 6:8-30: Genesis-18
-    - Lessons for being an intercessory prayer warrior - Deuteronomy 9: Genesis-18
-    - Hannah’s prayers for fertility – 1 Samuel 1: Genesis-18
-    - Samuel’s intercessory prayers for Israel – 1 Samuel 12: 1-Samuel-18
-    - Intercessory prayers to lift’s Israel’s drought  – 2 Samuel 21: Genesis-18
-    - Intercessory prayers limit Israel’s plague  – 2 Samuel 24	: Genesis-18
-    - Solomon’s prayer for wisdom – 1 King 3: Genesis-18
-    - Elijah’s prayers resurrect dead boy– 1 Kings 17: Genesis-18
-    - Elijah pours out his grief to God – 1 Kings 19: Genesis-18
-    - Seven lessons on discerning God’s will - 1 Kings 22: Genesis-18
-    - Elisha’s prayers resurrect dead boy–  2 Kings 4: Genesis-18
-    - Hezekiah’s prayers save Judah – 2 Kings 19: Genesis-18
-    - Josiah’s prayers delay Judah’s judgement – 2 Kings 22: Genesis-18
-# Worship:
-#   Worship:
-#   Noah’s altar of gratitude - Genesis 8:  Genesis-
-#   Jacob’s altar of gratitude – Genesis 28: Genesis-
-#   Moses’ song of praise at the Red Sea – Exodus 15	: Exodus-15
-#   Seven lessons on worship from the Tabernacle – Exodus 25:  Exodus-25
-#   The command to love God (Part I) – Deuteronomy 10: Genesis-
-#   The command to love God (Part II) -Deuteronomy 11: Genesis-
-#     Seven principles for Spirit-Led worship - Deuteronomy 12  : Genesis-
-#   Seven lessons for remembering God’s miracles in your life - Joshua 4: Genesis-
-#   Seven lessons on worship from the song of Deborah and Barak - Judges 5  : Genesis-
-#     Hannah’s praise for God’s gift of her child – 1 Samuel 2: Genesis-
-#     David blessed Saul through his worship music – 1 Samuel 16: Genesis-
-#     Seven lessons on worship from David’s return of the ark - 2 Sam. 6: Genesis-
-#     Seven lessons from David on praising God’s holy character - 2 Samuel 22: Genesis-
-#     Seven lessons from Solomon on Spirit-led worship - 1 Kings 8: Genesis-
-#     Seven revelations about God’s holy character from Kings - 2 Kings 8: Genesis-
-#     	Seven things God wants from your worship - 1 Chronicles 25: Genesis-
-#     Seven reasons to praise God from Solomon’s prayer - 2 Chronicles 6: Genesis-
-    
+    - Lessons for being an intercessory prayer warrior - Deuteronomy 9: Deuteronomy-18
+    - Hannah’s prayers for fertility – 1 Samuel 1: 1-Samuel-1
+    - Samuel’s intercessory prayers for Israel – 1 Samuel 12: 1-Samuel-12
+    - Intercessory prayers to lift’s Israel’s drought  – 2 Samuel 21: 2-Samuel-21
+    - Intercessory prayers limit Israel’s plague  – 2 Samuel 24: 2-Samuel-24
+    - Solomon’s prayer for wisdom – 1 King 3: 1-Kings-3
+    - Elijah’s prayers resurrect dead boy– 1 Kings 17: 1-Kings-17
+    - Elijah pours out his grief to God – 1 Kings 19: 1-Kings-19
+    - Seven lessons on discerning God’s will - 1 Kings 22: 1-Kings-22
+    - Elisha’s prayers resurrect dead boy–  2 Kings 4: 2-Kings-4
+    - Hezekiah’s prayers save Judah – 2 Kings 19: 2-Kings-19
+    - Josiah’s prayers delay Judah’s judgement – 2 Kings 22: 2-Kings-22
+Worship:
+  Worship:
+    - Noah’s altar of gratitude - Genesis 8: Genesis-8
+    - Jacob’s altar of gratitude – Genesis 28: Genesis-28
+    - Moses’ song of praise at the Red Sea – Exodus 15: Exodus-15
+    - Seven lessons on worship from the Tabernacle – Exodus 25: Exodus-25
+    - The command to love God (Part I) – Deuteronomy 10: Deuteronomy-10
+    - The command to love God (Part II) -Deuteronomy 11: Deuteronomy-11
+    - Seven principles for Spirit-Led worship - Deuteronomy 12: Deuteronomy-12
+    - Seven lessons for remembering God’s miracles in your life - Joshua 4: Joshua-4
+    - Seven lessons on worship from the song of Deborah and Barak - Judges 5: Judges-5
+    - Hannah’s praise for God’s gift of her child – 1 Samuel 2: 1-Samuel-2
+    - David blessed Saul through his worship music – 1 Samuel 16: 1-Samuel-16
+    - Seven lessons on worship from David’s return of the ark - 2 Sam. 6: 2-Samuel-6
+    - Seven lessons from David on praising God’s holy character - 2 Samuel 22: 2-Samuel-22
+    - Seven lessons from Solomon on Spirit-led worship - 1 Kings 8: 1-Kings-8
+    - Seven revelations about God’s holy character from Kings - 2 Kings 8: 2-Kings-8
+    - Seven things God wants from your worship - 1 Chronicles 25: 1-Chronicles-25
+    - Seven reasons to praise God from Solomon’s prayer - 2 Chronicles 6: 2-Chronicles-6
