Progress on topics index

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -317,3 +317,18 @@ Worship:
     - Seven revelations about God’s holy character from Kings - 2 Kings 8: 2-Kings-8
     - Seven things God wants from your worship - 1 Chronicles 25: 1-Chronicles-25
     - Seven reasons to praise God from Solomon’s prayer - 2 Chronicles 6: 2-Chronicles-6
+Spiritual Warfare:
+  Lessons on Spiritual Warfare:
+    Spiritual warfare lessons from Moses (Part II) - Deuteronomy 20: Deuteronomy-20
+    Spiritual warfare lessons from Joshua (Part III) - Joshua 5: Joshua-20
+    Spiritual warfare lessons from Joshua (Part IV) - Joshua 6: Joshua-6
+    Turning spiritual defeat into victory (Part V) - Joshua 8: Joshua-8
+    Spiritual warfare lessons from Joshua (Part VI) - Joshua 11:  Joshua-11
+    Spiritual warfare lessons from Gideon  (Part VII) - Judges 7: Joshua-7
+    Spiritual warfare lessons from Israel’s civil war (Part VIII) - 2 Samuel 2: 2-Samuel-2
+    Spiritual warfare lessons from David’s victories (Part IX) - 2 Samuel 10  : 2-Samuel-10
+    Spiritual warfare lessons from the war against Moab (Part X) - 2 Kings 3  : 2-Kings-3
+    Spiritual warfare lessons from Elisha (Part XI) - 2 Kings: 2-Kings-6
+Stewardship:
+  Lessons on Tithing:
+    Abrah
