--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -319,16 +319,35 @@ Worship:
     - Seven reasons to praise God from Solomon’s prayer - 2 Chronicles 6: 2-Chronicles-6
 Spiritual Warfare:
   Lessons on Spiritual Warfare:
-    Spiritual warfare lessons from Moses (Part II) - Deuteronomy 20: Deuteronomy-20
-    Spiritual warfare lessons from Joshua (Part III) - Joshua 5: Joshua-20
-    Spiritual warfare lessons from Joshua (Part IV) - Joshua 6: Joshua-6
-    Turning spiritual defeat into victory (Part V) - Joshua 8: Joshua-8
-    Spiritual warfare lessons from Joshua (Part VI) - Joshua 11:  Joshua-11
-    Spiritual warfare lessons from Gideon  (Part VII) - Judges 7: Joshua-7
-    Spiritual warfare lessons from Israel’s civil war (Part VIII) - 2 Samuel 2: 2-Samuel-2
-    Spiritual warfare lessons from David’s victories (Part IX) - 2 Samuel 10  : 2-Samuel-10
-    Spiritual warfare lessons from the war against Moab (Part X) - 2 Kings 3  : 2-Kings-3
-    Spiritual warfare lessons from Elisha (Part XI) - 2 Kings: 2-Kings-6
+    - Spiritual warfare lessons from Moses (Part II) - Deuteronomy 20: Deuteronomy-20
+    - Spiritual warfare lessons from Joshua (Part III) - Joshua 5: Joshua-20
+    - Spiritual warfare lessons from Joshua (Part IV) - Joshua 6: Joshua-6
+    - Turning spiritual defeat into victory (Part V) - Joshua 8: Joshua-8
+    - Spiritual warfare lessons from Joshua (Part VI) - Joshua 11:  Joshua-11
+    - Spiritual warfare lessons from Gideon  (Part VII) - Judges 7: Joshua-7
+    - Spiritual warfare lessons from Israel’s civil war (Part VIII) - 2 Samuel 2: 2-Samuel-2
+    - Spiritual warfare lessons from David’s victories (Part IX) - 2 Samuel 10: 2-Samuel-10
+    - Spiritual warfare lessons from the war against Moab (Part X) - 2 Kings 3: 2-Kings-3
+    - Spiritual warfare lessons from Elisha (Part XI) - 2 Kings: 2-Kings
 Stewardship:
   Lessons on Tithing:
-    Abrah
+    - "Abraham’s tithes - Genesis 14": Genesis-14
+    - "Jacob’s vow of tithing - Genesis 28": Genesis-28
+    - The Feast of First Fruits - Exodus 13: Exodus-13
+    - "Believers’ duty to tithe promptly - Exodus 22": Exodus-22
+    - "The Jews’ abundant tithes for the Tabernacle - Exodus 36": Exodus-36
+    - Tithing to support ministry (Part I) - Exodus 29: Exodus-29
+    - Tithing to support ministry (Part II) - Deuteronomy 12: Deuteronomy-12
+    - Tithing to support ministry (Part II) - Deuteronomy 18: Deuteronomy-18
+    - Tithing your first fruits out of gratitude - Deuteronomy 26: Deuteronomy-26
+Jesus in the Old Testament:
+  Jesus’ Seven Festivals - The Appointed Times to Celebrate Him:
+    - Jesus in the Passover / Seder / The Crucifixion – Exodus 12: Exodus-12
+    - Jesus in the Feast of Unleavened Bread / the Passion Week - Deuteronomy 16: Deuteronomy-12
+    - Jesus in the Feast of First Fruits / Resurrection Sunday - Exodus 13: Exodus-12
+    - Jesus in the Feast of Weeks / Pentecost - Leviticus 23:6-22: Leviticus-23.4-22
+    - Jesus in the Yom Kippur / The Possible Rapture – Leviticus 16: Leviticus-16
+    - Jesus in the Rosh Hashanah / National Prayer Day - Leviticus 23:23-32: Leviticus-23.23-32
+    - Jesus in the Succoth / Tabernacles (His Birthday) - Numbers 29:12-40: Numbers-29.12-40
+    - Jesus in the second Passover – Numbers 9  (new): Numbers-9
+    - Josiah’s spiritual renewal with the Passover – 2 Chronicles 35: 2-Chronicles-35
