Update topics index to section 12 (#6)

--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -317,3 +317,183 @@ Worship:
     - Seven revelations about God’s holy character from Kings - 2 Kings 8: 2-Kings-8
     - Seven things God wants from your worship - 1 Chronicles 25: 1-Chronicles-25
     - Seven reasons to praise God from Solomon’s prayer - 2 Chronicles 6: 2-Chronicles-6
+Spiritual Warfare:
+  Lessons on Spiritual Warfare:
+    - Spiritual warfare lessons from Moses (Part II) - Deuteronomy 20: Deuteronomy-20
+    - Spiritual warfare lessons from Joshua (Part III) - Joshua 5: Joshua-20
+    - Spiritual warfare lessons from Joshua (Part IV) - Joshua 6: Joshua-6
+    - Turning spiritual defeat into victory (Part V) - Joshua 8: Joshua-8
+    - Spiritual warfare lessons from Joshua (Part VI) - Joshua 11:  Joshua-11
+    - Spiritual warfare lessons from Gideon  (Part VII) - Judges 7: Joshua-7
+    - Spiritual warfare lessons from Israel’s civil war (Part VIII) - 2 Samuel 2: 2-Samuel-2
+    - Spiritual warfare lessons from David’s victories (Part IX) - 2 Samuel 10: 2-Samuel-10
+    - Spiritual warfare lessons from the war against Moab (Part X) - 2 Kings 3: 2-Kings-3
+    - Spiritual warfare lessons from Elisha (Part XI) - 2 Kings: 2-Kings
+Stewardship:
+  Lessons on Tithing:
+    - "Abraham’s tithes - Genesis 14": Genesis-14
+    - "Jacob’s vow of tithing - Genesis 28": Genesis-28
+    - The Feast of First Fruits - Exodus 13: Exodus-13
+    - "Believers’ duty to tithe promptly - Exodus 22": Exodus-22
+    - "The Jews’ abundant tithes for the Tabernacle - Exodus 36": Exodus-36
+    - Tithing to support ministry (Part I) - Exodus 29: Exodus-29
+    - Tithing to support ministry (Part II) - Deuteronomy 12: Deuteronomy-12
+    - Tithing to support ministry (Part II) - Deuteronomy 18: Deuteronomy-18
+    - Tithing your first fruits out of gratitude - Deuteronomy 26: Deuteronomy-26
+Jesus in the Old Testament:
+  Jesus’ Seven Festivals - The Appointed Times to Celebrate Him:
+    - Jesus in the Passover / Seder / The Crucifixion – Exodus 12: Exodus-12
+    - Jesus in the Feast of Unleavened Bread / the Passion Week - Deuteronomy 16: Deuteronomy-12
+    - Jesus in the Feast of First Fruits / Resurrection Sunday - Exodus 13: Exodus-12
+    - Jesus in the Feast of Weeks / Pentecost - Leviticus 23:6-22: Leviticus-23.4-22
+    - Jesus in the Yom Kippur / The Possible Rapture – Leviticus 16: Leviticus-16
+    - Jesus in the Rosh Hashanah / National Prayer Day - Leviticus 23:23-32: Leviticus-23.23-32
+    - Jesus in the Succoth / Tabernacles (His Birthday) - Numbers 29:12-40: Numbers-29.12-40
+    - Jesus in the second Passover – Numbers 9  (new): Numbers-9
+    - Josiah’s spiritual renewal with the Passover – 2 Chronicles 35: 2-Chronicles-35
+  The Foreshadow of Jesus in the Tabernacle:
+    - Jesus in the Outer Courtyard / Atonement - Exodus 27: Exodus-27
+    - Jesus in Tent of Meeting  / Sanctification – Exodus 26: Exodus-26
+    - Jesus in the Holy of Holies / Worship – Exodus 25: Exodus-25
+  "Jesus’ Pre-Incarnate Appearances":
+    - Jesus appears to Hagar 	– Genesis 16: Genesis-16
+    - Jesus appears to Abraham 	– Genesis 18: Genesis-18
+    - Jesus appears to Isaac – Genesis 22: Genesis-22
+    - Jesus appears to Jacob – Genesis 32: Genesis-32
+    - Jesus appears to Moses – Exodus 3: Exodus-3
+    - Jesus appears to Joshua	– Joshua 5: Joshua-5
+    - Jesus appears to Gideon	– Judges 6: Judges-6
+    - Jesus appears to Samson’s parents - Judges 13: Judges-13
+Attributes of God:
+  God’s Faithful Old Testament Covenants:
+    - The Noah Covenant	- Genesis 9: Genesis-9
+    - The Abrahamic Covenant - Genesis 12: Genesis-12
+    - The Mosaic Covenant - Exodus 20: Exodus-20
+    - The Davidic Covenant - 2 Samuel 7: 2-Samuel-7
+  God’s Faithfulness:
+    - God’s faithfulness in remembering Noah – Genesis 8: Genesis-8
+    - God’s faithfulness in creating the Jewish nation – Exodus 1: Exodus-1
+    - God’s faithfulness in responding to the Jews’ suffering – Exodus 3: Exodus-3
+    - God’s fulfilled promise of the Messiah– Numbers 23-24: Numbers-23-24
+    - God’s faithfulness in the wilderness - Deuteronomy 2: Deuteronomy-2
+    - God’s fulfilled promise to restore the Jews after exile – Deuteronomy 30: Deuteronomy-30
+    - God’s fulfilled promises to Moses – Deuteronomy 34: Deuteronomy-34
+    - God’s fulfilled promises to Abraham – Joshua 1: Joshua-1 
+    - God’s fulfilled promise in making David king - 2 Samuel 5: 2-Samuel-5
+    - God fulfills His land promises through David - 2 Samuel 8: 2-Samuel-8 
+    - David’s praise for God’s faithfulness  - Samuel 22: Samuel-22
+    - God’s faithfulness during Judah’s unfaithfulness – 2 Kings 8: 2-Kings-8
+    - God’s faithfulness in protecting Judah – 2 Kings 19: 2-Kings-19
+    - God’s faithfulness in preserving David’s line in exile – 2 Kings 25: 2-Kings-25
+    - God’s faithfulness in restoring the Jews to Israel – 2 Chronicles 36: 2-Chronicles-36
+  God’s Mercy and Grace:
+    - God’s mercy and grace on Jacob’s family - Genesis 49: Genesis-49 
+    - God’s mercy and grace after the Jews six rebellions – Exodus 17: 
+    - God’s mercy and grace after the golden calf – Exodus 34: Exodus-34
+    - God’s mercy and grace on the 12 tribes – Numbers 1:17-54: Numbers-1.17-54
+    - God’s mercy and grace in the red heifer – Numbers 19: Numbers-19
+    - God’s mercy and grace in the wilderness – Deuteronomy 9: Deuteronomy-9 
+    - God’s mercy and grace on the 12 tribes - Deuteronomy 33: Deuteronomy-33
+    - God’s mercy and grace in sending His judges – Judges 3: Judges-3
+    - God’s mercy and grace during the Jews’ false repentances – Judges 10: Judges-10 
+    - God’s mercy when the Jews repented – 1 Samuel 12: 1-Samuel-12
+    - God’s mercy and grace in keeping David from sin – 1 Samuel 29: 1-Samuel-29
+    - God’s mercy and grace after David’s adultery and murder – 2 Samuel 12: 2-Samuel-12
+    - Solomon’s praise for God’s mercy and forgiveness – 1 Kings 8: 1-Kings-8
+    - God’s mercy any grace in protecting Ahab – 1 Kings 20: 1-Kings-20
+    - God give Ahaziah three chances to repent – 2 Kings 1: 2-Kings-1 
+    - God’s mercy and grace from His selection of the Davidic kings - 1 Chronicles 3: 1-Chronicles-3
+  God’s Justice:
+    - Seven principles of divine justice (Part I) – Exodus 21: Exodus-21
+    - Seven principles of divine justice (Part I) – Exodus 22: Exodus-22
+    - God’s laws of righteousness and integrity – Exodus 23: Exodus-23
+    - God’s law for protecting the poor and servants – Leviticus 25: Leviticus-25
+    - God’s anger against Mariam’s racial bigotry – Numbers 12: Numbers-12
+    - Being God’s refuge to protect the oppressed – Numbers 35: Numbers-35
+    - God protects Zelophehad’s daughters against inequality - Numbers 36: Numbers-36
+    - God’s law of protection for orphans, widows and immigrants - Deuteronomy 10: Deuteronomy-10
+    - God’s law of protection for the poor and those with debts - Deuteronomy 15: Deuteronomy-15
+    - Seven principles of divine justice - Deuteronomy 17: Deuteronomy-17
+    - Being God’s refuge to protect the oppressed – Deuteronomy 19: Deuteronomy-19
+    - God’s law of protection for the innocent - Deuteronomy 21: Deuteronomy-21
+    - God’s law of protection against rape - Deuteronomy 21: Deuteronomy-21
+    - God’s law of protection for servants and the poor - Deuteronomy 22: Deuteronomy-22
+    - God’s protections for the poor, workers and immigrants– Deuteronomy 24: Deuteronomy-24
+    - God’s protections for the accused, criminals, widows – Deuteronomy 25: Deuteronomy-25
+    - God’s protections in the cities of refuge- Joshua 20: Joshua-20
+    - Seven lessons on investigating and disciplining sin - Judges 20: Judges-20
+  God’s Deliverance / Protection:
+    - God’s deliverance from the Egyptian army – Exodus 14: Exodus-14
+    - God’s deliverance from the Amalekites – Exodus 17: Exodus-17
+    - God’s deliverance in the stations of the wilderness - Numbers 33: Numbers-33
+    - Faith-led obedience brings God’s deliverance - Deuteronomy 11: Deuteronomy-11
+    - God is your refuge of protection – Deuteronomy 19: Deuteronomy-19
+    - God’s defeat of 35 enemy kings - Joshua 12: Joshua-12
+    - God delivers David from Saul’s attacks – 1 Samuel 19: 1-Samuel-19
+    - God delivers David in the wilderness (Part I) – 1 Samuel 21: 1-Samuel-21
+    - God delivers David from Absalom’s coup - 2 Samuel 17: 2-Samuel-17
+    - God protects a faithful servant from a famine – 2 Kings 8: 2-Kings-8
+    - God delivers David’s line from Athaliah’s attempt to kill them – 2 Kings 11: 2-Kings-11
+    - God delivers Judah from the Assyrian army – 2 Kings 19: 2-Kings-19
+    - From Jehoshaphat, seven lessons on God’s deliverance - 2 Chronicles 20: 2-Chronicles-20
+  God’s Blessing:
+    - Lessons on God’s blessings from Israel’s blessings to Joseph- Genesis 48: Genesis-48
+    - Lessons on God’s blessings from Israel’s blessings to the 12 tribes - Genesis 49: Genesis-49
+    - God’s provision of bread in the wilderness – Exodus 16: Exodus-16
+    - God’s promises of conditional blessings – Leviticus 26: Leviticus-26
+    - Seven blessings from Aaron’s rod- Numbers 17: Numbers-17
+    - God’s provision of bread in the wilderness – Numbers 20: Numbers-20
+    - God’s protection against in the wilderness – Numbers 21: Numbers-21
+    - God’s blessings from obedience (Part I) - Deuteronomy 7: Deuteronomy-7
+    - God’s blessings from obedience (Part II) - Deuteronomy 11: Deuteronomy-11
+    - God’s blessings from obedience (Part III) -Deuteronomy 28:1-14: Deuteronomy-28.1-14
+    - God’s blessings from obedience (Part IV) -Deuteronomy 29: Deuteronomy-29
+    - God’s blessings from obedience (Part V) - Deuteronomy 30: Deuteronomy-30
+    - God’s blessings from obedience (Part VI) - Deuteronomy 32: Deuteronomy-32
+    - God’s blessings from obedience (Part VII) - Deuteronomy 33: Deuteronomy-33
+    - Seven lessons on God’s blessings from His miracle at the Jordan River - Joshua 3 : Joshua-3
+    - Seven lessons on God’s blessings from Judah’s inheritance – Joshua 15: Joshua-15
+    - Seven lessons on God’s blessings from Joseph’s inheritance – Joshua 16: Joshua-16
+    - Seven lessons from Manasseh on seizing your spiritual inheritance – Joshua 17: Joshua-17
+    - Seven lessons from eight tribes on seizing your spiritual inheritance – Joshua 18 : Joshua-18
+    - Seven lessons from six tribes on seizing your spiritual inheritance – Joshua 19: Joshua-19
+    - Seven lessons on God’s blessings from David’s anointing as king - 2 Samuel 5  : 2-Samuel-5
+    - Through Elisha, God miraculously provides for His people – 2 Kings 4: 2-Kings-4
+    - Seven unconditional and conditional blessings that God offers - 2 Chronicles 17: 2-Chronicles-17
+  God’s Gift of Wisdom:
+    - Seven lessons regarding God’s wisdom from Solomon - 1 Kings 3: 1-Kings-3
+    - Seven lessons on using God’s wisdom to lead - 1 Kings 4: 1-Kings-4
+    - Seven lessons on seeking and sharing God’s wisdom - 1 Kings 10: 1-Kings-10
+    - Seven lessons regarding God’s wisdom from Solomon - 2 Chronicles 1: 2-Chronicles-1
+  God’s Gift of Healing:
+    - God’s promise of healing – Exodus 15: Exodus-15
+    - God’s blessing of both a prolonged and healthy life – Deuteronomy 34: Deuteronomy-34
+    - God heals Naaman of leprosy - 2 Kings 5: 2-Kings-5
+    - God heals Hezekiah and extends his life – 2 Kings 19: 2-Kings-19
+  God’s Judgement of Sin / Discipline:
+    - God judges Adam, Eve and mankind	- Genesis 3: Genesis-3
+    - God judges the world with Flood – Genesis 6: Genesis-6
+    - God’s judges the Canaanites – Genesis 15: Genesis-15
+    - God judges Sodom and Gomorrah – Genesis 19: Genesis-19
+    - God’s judges the Midianites - Numbers 31: Numbers-31
+    - God’s warnings of curses for disobedience – Leviticus 26: Leviticus-26
+    - God’s warnings of curses for disobedience -Deuteronomy 28:15-68: Deuteronomy-28.15-68
+    - God judges the Amorites - Joshua 10: Joshua-10
+    - God disciplines Israel with drought – Ruth 1: Ruth-1
+    - God’s judges the house of Eli – 1 Samuel 3: 1-Samuel-3
+    - God judges the Jews for misusing the ark – 1 Samuel 4: 1-Samuel-4 
+    - God’s judges the Jews for touching the ark – 1 Samuel 6: 1-Samuel-6
+    - Seven lessons on God’s judgment from the Amalekites and Saul – 1 Samuel 13: 1-Samuel-13
+    - God judges Saul for disobedience  – 1 Samuel 28: 1-Samuel-28
+    - The curse on David’s family – 2 Samuel 13: 2-Samuel-13
+    - God judges Absalom – 2 Samuel 18: 2-Samuel-18
+    - God judges Solomon – 1 Kings 11	: 1-Kings-11
+    - God judges Jeroboam – 1 Kings 13: 1-Kings-13
+    - God’s curse on Northern Israel for idolatry – 1 Kings 14: 1-Kings-14
+    - God judges Ahab for rebellion– 1 Kings 21: 1-Kings-21
+    - God judges Gehazi for stealing gifts for God – 2 Kings 5: 2-Kings-5
+    - God judges Ahab’s family – 2 Kings 9: 2-Kings-9
+    - God judges Northern Israel with exile - 2 Kings 17: 2-Kings-17
+    - God judges the Assyrians – 2 Kings 19: 2-Kings-19
+    - God judges Judah with invasion – 2 Kings 24: 2-Kings-24
+    - God judges Judah with exile – 2 Kings 25: 2-Kings-25 
