--- a/lib/topic-index.yml
+++ b/lib/topic-index.yml
@@ -497,3 +497,20 @@ Attributes of God:
     - God judges the Assyrians – 2 Kings 19: 2-Kings-19
     - God judges Judah with invasion – 2 Kings 24: 2-Kings-24
     - God judges Judah with exile – 2 Kings 25: 2-Kings-25 
+Apologetics:
+  Apologetics Regarding Creation:
+    - The days of Genesis explained - Genesis 1(a)(1): Genesis-1.1-8
+    - God’s creation of the universe and Earth (Days 1 – 2) Genesis 1.1-8: Genesis-1.1-8
+    - God’s creation of the first life on Earth (Days 3 – 4) - Genesis 1.9-19: Genesis-1.9-19
+    - God’s creation of the animals and mankind (Days 5 – 6) - Genesis 1.20-31: Genesis-1.9-19
+    - The Flood evidence - 	Genesis 7: Genesis-7
+    - The Garden of Eden’s possible location - Genesis 2: Genesis-2
+    - The origins of language – Genesis 1.20-31: Genesis-1.9-19
+    - The origins of the nations - Genesis 10: Genesis-10 
+    - The Tower of Babel – Genesis 11: Genesis-11
+    - Proof of the parting of the Red Sea / Mount Horab - Exodus 14: Exodus-14
+  Apologetics Regarding the Bible: 
+    - Proof of the Trinity – Genesis 5: Genesis-5
+    - Proof of Jesus in the ordering of the 12 tribes in the wilderness - Numbers 2: Numbers-2
+    - Response to the Documentary Hypothesis – Deuteronomy 1: Deuteronomy-1
+
